# red-willow

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  jarvis.py  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  run_demo.sh
scripts/: check_env.sh  jarvis_task_template.xml  register_task.ps1  set_default_mic.ps1  setup_env.sh  setup_jarvis_env.py
tests/: conftest.py  test_api.py  test_debug_and_logfile.py  test_e2e_audio.py  test_gui_smoke.py  test_jarvis.py  test_jarvis_integration.py  test_logging.py  test_manage_tools.py  test_mic_selection.py  test_process_command.py  test_task_registration_files.py  test_windows_setup.py
tools/: jarvis_gui.py  jarvis_manage.py
